home pg mobile footer spacing bug fixes

--- a/home.css
+++ b/home.css
@@ -163,6 +163,7 @@ body{
         background-color: #190838;
         color: white;
         display: flex;
+        gap: 200px;
         justify-content: space-between;
         max-height: 80px;
         margin-top: 20px;
